# roboticaIIINF01034

trab1/: CMakeLists.txt  p3dx.rviz  package.xml
trab1/launch/: p3dx-rosaria-real.launch  p3dx-rosaria.launch
trab1/src/: Action.cpp  Action.h  Perception.cpp  Perception.h  Utils.h  main.cpp
trab2/: CMakeLists.txt  p3dx.rviz  package.xml
trab2/launch/: p3dx-rosaria.launch
trab2/src/: Perception.cpp  Perception.h  Utils.cpp  Utils.h  main.cpp
trab3/: CMakeLists.txt  INSTRUÇÕES.txt  p3dx.rviz  package.xml
trab3/launch/: p3dx-rosaria-real.launch  p3dx-rosaria.launch
trab3/maps/: denseMap.map
trab3/src/: Action.cpp  Action.h  Perception.cpp  Perception.h  Utils.cpp  Utils.h  main.cpp
trab4/: CMakeLists.txt  p3dx.rviz  package.xml
trab4/launch/: p3dx-rosaria.launch
trab4/maps/: denseMap.pgm  denseMap.yaml  sparseMap.pgm  sparseMap.yaml
trab4/src/: Perception.cpp  Perception.h  Utils.cpp  Utils.h  main.cpp
