<package>
  <name>trab3</name>
  <version>0.0.0</version>
  <description>trab3</description>
  <maintainer email="rqmaffei@gmail.com">Renan de Queiroz Maffei</maintainer> 
  <license>BSD</license>
  <author email="rqmaffei@gmail.com">Renan de Queiroz Maffei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>laser_geometry</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>laser_geometry</run_depend>
</package>
